[package]
name = "snapshot"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT"
description = "Golden master regression testing utility."
repository = "https://github.com/dikaiosune/snapshot-rs"
keywords = ["test", "testing", "regression", "snapshot", "golden master"]
categories = ["development-tools"]

[dependencies]
serde = "^1.0.7"
serde_derive = "^1.0.8"
snapshot-proc-macro = { path = "snapshot-proc-macro" }
