[package]
name = "cargo-snapshot"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT"
description = "Golden master regression testing CLI interface."
repository = "https://github.com/dikaiosune/snapshot-rs"
keywords = ["test", "testing", "regression", "snapshot", "golden master"]
categories = ["development-tools"]

[dependencies]
