[package]
name = "cargo-snapshot"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT"
description = "CLI interface for \"snapshot\" or golden master regression testing."
repository = "https://github.com/dikaiosune/snapshot-rs"
keywords = ["test", "testing", "regression", "snapshot", "golden master"]
categories = ["development-tools"]

[dependencies.snapshot]
version = "*"
path = "../"

[dependencies]
clap = "^2.25.1"
dialoguer = "^0.1.0"
duct = "^0.9.1"
error-chain = "^0.10.0"
serde = "^1.0.10"
serde_json = "^1.0.2"
walkdir = "^1.0.7"
