[package]
name = "snapshot-proc-macro"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { git = "https://github.com/alexcrichton/proc-macro2.git" }
quote = { git = 'https://github.com/dtolnay/quote' }

[dependencies.syn]
git = "https://github.com/dtolnay/syn.git"
features = ["parsing", "printing", "full", "extra-traits", "clone-impls" ]
