[package]
name = "snapshot-proc-macro"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
description = "Procedural macro for generating snapshot tests."
license = "MIT"
repository = "https://github.com/anp/snapshot-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.14"
features = ["parsing", "printing", "full", "extra-traits", "clone-impls" ]
